<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/background">

    <!-- Meditation Image -->
    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcome_title" />

    <!-- Welcome Title -->
    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_tittle"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:layout_margin="1dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcome_subtitle" />

    <!-- Welcome Subtitle -->
    <TextView
        android:id="@+id/welcome_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_paragraph"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- "Powered by" Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Powered by"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingEnd="8dp"/>

        <!-- Spotify Icon -->
        <ImageView
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:src="@drawable/spotify_logo_text"
        android:contentDescription="Spotify" />
    </LinearLayout>

    <!-- Start Therapy Button at the bottom -->
    <Button
        android:id="@+id/begin_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:text="@string/begin_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/genre_selection_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/gear_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
